--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,11 +5,17 @@ on:
     branches: [main]
 
 jobs:
-  comment:
+  pr:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: get pr
+      - name: get current pr
+        id: this-pr
         uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: output
+        run: |
+          echo ${{ steps.this-pr.outputs.title }}
+          echo ${{ steps.this-pr.outputs.url }}
+          echo ${{ steps.this-pr.outputs.author }}
