feat: output pr number

--- a/action.yaml
+++ b/action.yaml
@@ -10,6 +10,8 @@ inputs:
 outputs:
   url:
     description: HTML url for pull request
+  number:
+    description: Pull request number
   title:
     description: Pull request title
   author:
